Fixes: resolve lazy loading, mail health check crash, CORS mobile web origin, and Expo SDK 57 theme imports